# Module-Lattice-Based-Digital-Signature-Algorithm-CRYSTALS-Dilithium-

./: LICENSE  README.md  pyproject.toml  run_all.sh  test_ml_dsa.py  usage.py
benchmarks/: bench.py
ml_dsa/: __init__.py  encoding.py  ml_dsa.py  ntt.py  params.py  polynomial.py  sampling.py  utils.py
